# urbanxx

./: .gitignore  .gitmodules  CMakeLists.txt  DISCLAIMER  LICENSE  README.md
.github/workflows/: auto_test.yml  clang-format.yml
config/: modules.pm-gpu.gnugpu
doc/: SurfaceRunoff_Porting_Plan.md  heat_diffusion_equations.md
driver/: CMakeLists.txt  driver.c  driver.cpp  driver_f.F90
include/: Urban.h  UrbanMacros.h  urban_mod.F90
include/finclude/: UrbanFortranMacros.h  UrbanMacros.h
include/private/: AtmosphereTypeImpl.h  DataTypesImpl.h  KokkosViewMacros.h  UrbanCanyonTypeImpl.h  UrbanConstants.h  UrbanDebugUtils.h  UrbanGetterHelpers.h  UrbanHeatDiffusionImpl.h  UrbanHydrologyFunctions.h  UrbanHydrologyImpl.h  UrbanInitializeImpl.h  UrbanLongwaveRadImpl.h  UrbanMacros.h  UrbanParamsTypeImpl.h  UrbanSetterHelpers.h  UrbanShortwaveRadImpl.h  UrbanSurfaceFluxesImpl.h  UrbanSurfaceTypeImpl.h  UrbanThermalFunctions.h  UrbanTypeImpl.h  UrbanValidation.h  UrbanViewFactorImpl.h
src/: AtmosphereType.cpp  CMakeLists.txt  KokkosWrappers.cpp  Urban.cpp  UrbanDrainage.cpp  UrbanHeatDiffusion.cpp  UrbanHeatDiffusionGetters.cpp  UrbanHydrology.cpp  UrbanHydrologyGetters.cpp  UrbanHydrologySetters.cpp  UrbanInitialize.cpp  UrbanLongwaveRad.cpp  UrbanParamsType.cpp  UrbanRadiationGetters.cpp  UrbanShortwaveRad.cpp  UrbanSoilFluxes.cpp  UrbanSoilFluxesGetters.cpp  UrbanSoilFluxesSetters.cpp  UrbanSurfaceFluxes.cpp  UrbanSurfaceFluxesGetters.cpp  UrbanSurfaceRunoff.cpp  UrbanSurfaceRunoffGetters.cpp  UrbanSurfaceRunoffSetters.cpp  UrbanSurfaceTemperatureSetters.cpp  UrbanTemperature.cpp  UrbanWaterTable.cpp
src/f90-mod/: Urban.F90
tests/: CMakeLists.txt
tests/unit/: CMakeLists.txt  test_albedo_setters.cpp  test_atm_shortwave.cpp  test_building_temperature_setter.cpp  test_canyon_air_getters.cpp  test_full_model_setup.h  test_hydrology_getters.cpp  test_initialization.cpp  test_layer_temp_getters.cpp  test_net_shortwave_getters.cpp  test_parameter_setters.cpp  test_radiation_getters.cpp  test_setview_helpers.cpp  test_surface_flux_getters.cpp  test_temperature_setters.cpp  test_urban_create_destroy.cpp
